updated package.json with repo field

--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
   "dependencies": {
     "msgpack": "^0.2.4",
     "node-uuid": "^1.4.2"
+  },
+  "repository": {
+      "type": "git",
+      "url": "git://github.com/tmcnab/Idaten.git"
   }
 }
